--- a/coming-soon-page/coming-soon-page.html
+++ b/coming-soon-page/coming-soon-page.html
@@ -49,31 +49,34 @@
                         <p>We provide you a better service. you have no complain about our <br> service, it’s guaranteed.</p>
                     </div>
                 </div>
-                <div class="row text-center justify-content-center comming-main">
+                <div class="row text-center justify-content-center comming-main" id="countdown">
                     <div class="col-md-3 col-sm-6 comming-soon-timer">
                         <div class="timer-items">
                             <div class="timers">
-                                <h2>00</h2>
+                                <h2 id="day"></h2>
                         <p>Days</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6 comming-soon-timer">
                         <div class="timer-items">
-                            <div class="timers"><h2>00</h2>
-                        <p>Hours</p></div>
+                            <div class="timers">
+                                <h2 id="hour"></h2>
+                        <p>Hours</p>
+                    </div>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6 comming-soon-timer">
                         <div class="timer-items">
-                            <div class="timers"><h2>00</h2>
+                            <div class="timers">
+                                <h2 id="month"></h2>
                         <p>Minutes</p></div>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6 comming-soon-timer">
                         <div class="timer-items">
                             <div class="timers">
-                                <h2>00</h2>
+                                <h2 id="second"></h2>
                         <p>Seconds</p>
                             </div>
                         </div>
