--- a/index.html
+++ b/index.html
@@ -541,25 +541,25 @@
             <div class="row">
                 <div class="col-md-3 col-sm-6 col-xs-6">
                     <div class="counter">
-                        <h2>219</h2>
+                        <h2 class="counter_number">219</h2>
                         <p>Satisfied Client</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-6">
                     <div class="counter">
-                        <h2>333</h2>
+                        <h2 class="counter_number">333</h2>
                         <p>Total Employeest</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-6">
                     <div class="counter">
-                        <h2>444</h2>
+                        <h2 class="counter_number">444</h2>
                         <p>Finished Project</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-6">
                     <div class="counter">
-                        <h2>555</h2>
+                        <h2 class="counter_number">555</h2>
                         <p>Happy Customer</p>
                     </div>
                 </div>
@@ -1060,12 +1060,20 @@
     <!-- ========== jquery ========== -->
     <script src="./assets/js/jquery-1.12.4.min.js"></script>
     <!-- ========== jquery ========== -->
+        <!-- ========== counter up js   ========== -->
+    <script src="./assets/js/jquery.counterup.min.js"></script>
+    <!-- ========== counter up js   ========== -->
+    <!-- ========== way point js ========== -->
+    <script src="./assets/js/waypoints.min.js"></script>
+    <!-- ========== way point js========== -->
+
     <!-- ========== slick slider ========== -->
     <script src="./assets/js/slick.min.js"></script>
     <!-- ========== slick slider ========== -->
     <!-- ========== bootstrap ========== -->
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
     <!-- ========== bootstrap ========== -->
+    
     <!-- ========== main js ========== -->
     <script src="./assets/js/app.js"></script>
     <!-- ========== main js ========== -->
